re PR rtl-optimization/15100 (cc1plus got hang-up on libstdc++-v3/testsuite/abi_check.cc)

PR optimization/15100
	* combine.c (distribute_notes): Don't create a dangling
	REG_LIBCALL/REG_RETVAL note.

From-SVN: r81736